Added unit test and changed Lists into ImmutableLists